trying to fix safari layout bug

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 
 span {
   color: #f44786;
+  -webkit-text-size-adjust: none;
 }
 
 .start-btn {
